force-app/main/default/objects/Field_Mapping_Error_Log__c/Field_Mapping_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Field Mapping Error Log</label>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Mapping Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>