force-app/main/default/objects/Field_Mapping_Error_Log__c/fields/Field_Mapping_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Mapping Configuration</label>
    <referenceTo>Field_Mapping_Configuration__c</referenceTo>
    <relationshipLabel>Field Mapping Error Logs</relationshipLabel>
    <relationshipName>Field_Mapping_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>