force-app/main/default/objects/Field_Mapping_Error_Log__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <label>Source Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>