force-app/main/default/objects/Field_Mapping_Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Error_Message__c</columns>
    <columns>Field_Mapping_Configuration__c</columns>
    <columns>Error_Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>